Fixed playlist/find window results overlapping surrounding elements

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1386,6 +1386,11 @@ h6
 	flex : 1 1 auto;
 }
 
+.flex-no-shrink
+{
+	flex-shrink: 0;
+}
+
 [hidden]
 {
 	display : none !important;
